# analytics2map

./: .gitignore  CNAME  README.md  clustrdump.txt  index.html  pyproject.toml  test-timezone.html
.github/workflows/: update-map.yml
config/: example.yml  prod.yml
data/: clustrmaps_summary.csv  last_seen.txt  visitors.sqlite3  visits.tsv
output/: visitors-data.json  visitors-globe.html  visitors-interactive.html
src/analytics2map/: __init__.py  cli.py  clustrmaps.py  config.py  ga_client.py  geo_lookup.py  map_background.py  persistence.py  schemas.py
src/analytics2map/renderer/: interactive_globe_renderer.py  interactive_map_renderer.py  map_renderer.py
